# flair

./: .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  compose.yaml  docker-compose-test.ts  go.mod  go.sum  main.go  test.ts
bindings/: AddFlairForm.ts  AddFlairJson.ts  AddUserFlairJson.ts  AddUserRequest.ts  CommunityActorQuery.ts  DeleteFlairJson.ts  DeleteUserFlairJson.ts  DeleteUserRequest.ts  Flair.ts  FlairDirectory.ts  GetCommunityFlairsRequest.ts  GetFlairsJson.ts  GetUserFlairJson.ts  GetUserFlairRequest.ts  UserFlair.ts
database/: readme.md
docs/: connecting-to-db.md
server/: errors.go  lemmyDb.go  server.go
server/sql/: flair.sql
src/: cli.rs  db.rs  lib.rs  main.rs  router.rs  verify.rs
views/: index.html
