[package]
name = "flair"
version = "0.0.2"
edition = "2021"
authors = ["Tristan Isham <tristan@isham.co>"]
description = "Flair is an augmentation for Lemmy, adding user flairs like Reddit"
repository = "https://github.com/basedcount/flair/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { version = "0.12.1", features = ["serde"] }
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.29", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive"] }
deadpool-sqlite = { version = "0.5.0", features = ["rt_tokio_1", "serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["serde", "serde_json"] }
ts-rs = { version = "7.0.0", features = ["uuid", "url", "chrono", "chrono-impl"] }
